upfrontsystems/izinto-angular/issues#167 improve spacing in charts Remove padding between charts on mobile view Use constant value for mobile width breakpoint Use smaller value for calculating legend width breakpoint

--- a/src/app/dashboard/chart/chart.component.scss
+++ b/src/app/dashboard/chart/chart.component.scss
@@ -4,47 +4,47 @@
 }
 
 .full-height {
-  height: calc(100vh - 190px);
+    height: calc(100vh - 190px);
 }
 
 mat-card.full-height mat-card-content {
-  height: 100%;
+    height: 100%;
 }
 
 g.grid g.tick line {
-  stroke: #ddd;
+    stroke: #ddd;
 }
 
 .line {
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 2px;
+    fill: none;
+    stroke: steelblue;
+    stroke-width: 2px;
 }
 
 .grid line {
-  stroke: lightgrey;
-  stroke-opacity: 0.6;
-  shape-rendering: crispEdges;
+    stroke: lightgrey;
+    stroke-opacity: 0.6;
+    shape-rendering: crispEdges;
 }
 
 .grid path {
-  stroke-width: 0;
+    stroke-width: 0;
 }
 
 .overlay {
-  fill: none;
-  pointer-events: all;
+    fill: none;
+    pointer-events: all;
 }
 
 .focus circle {
-  fill: #F1F3F3;
-  stroke: #6F257F;
-  stroke-width: 5px;
+    fill: #F1F3F3;
+    stroke: #6F257F;
+    stroke-width: 5px;
 }
 
 .hover-line {
-  stroke: darkgray;
-  stroke-width: 2px;
+    stroke: darkgray;
+    stroke-width: 2px;
 }
 
 .variable-line-item {
@@ -76,4 +76,14 @@ div.d3-chart {
 
 .chart-panel {
     padding-bottom: 60px;
+}
+
+/* less spacing on smaller screens */
+@media only screen and (max-width: 768px) {
+    div.d3-chart {
+        margin-top: 0 !important;
+    }
+    .chart-panel {
+        padding-bottom: 0 !important;
+    }
 }
