--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,9 +1,9 @@
 .full-height {
-  height: calc(100vh - 190px);
+    height: calc(100vh - 190px);
 }
 
 mat-card.full-height mat-card-content {
-  height: 100%;
+    height: 100%;
 }
 
 .list-icon {
@@ -20,8 +20,9 @@ mat-card.single-stat {
     background-color: #fafafa !important;
     border: 1px solid #c0c0c0;
     border-radius: 6px !important;
+
     mat-card-content {
-      padding: 5px 15px 15px;
+        padding: 5px 15px 15px;
     }
 }
 
@@ -33,6 +34,12 @@ mat-card.single-stat {
 
 .mat-card-content.dashboard-new {
     padding: 0;
+}
+
+@media (max-width: 768px) {
+    .mat-card-content {
+        padding: 0 !important;
+    }
 }
 
 mat-card.full-height {
